# autonotes

./: .gitignore  README.md  app.py  pyproject.toml
ocr_formatter/: __init__.py  formatter.py  ocr.py
templates/: index.html
